docs: the corpus instruments, trino's --add-modules, and a corpus map
§4 gains the two Gradle A/B pairs and the relative-`config.output` convention
that made them expressible, the `apply_to` finding -- using the pulsar entry
refuted §7's claim that the corpus route applies the plugin to one project -- and
trino's fourth Maven defect. §5 gains a fifth weak instrument: a vendor enforcer
that -Denforcer.skip=true does not skip and that prints nothing without -e. §7
retires the bullet the pairs answered and corrects the one that was wrong. §8 is
new: a map from every catalogue entry to what it can and cannot measure, so the
next reader does not have to infer coverage from the catalogue.

Next job: trino has no catalogue entry. It is the largest Maven reference
available and it found a defect on the first run, which is exactly the shape that
let jenkins go unnoticed.

Co-Authored-By: Claude Opus 5 (1M context) <noreply@anthropic.com>